Migrate to latest version of Xalan (endorsed) for all uses other than metadatatool.